# InboxPilot

./: .dockerignore  .gitignore  README.md  configure.sh  deploy-server.sh  deploy.sh  docker-compose.yml  env.sh.example  generate_icons.py  run-backend.sh  setup.sh  start.sh  troubleshoot.sh
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: auth.py  config.py  main.py  schemas.py
backend/app/db/: database.py  models.py
backend/app/email/: cleaner.py  hashing.py  taxonomy.py
backend/app/llm/: openai_client.py  prompts.py  schemas.py
backend/tests/: conftest.py  test_api.py  test_cleaner.py  test_hashing.py  test_llm_schemas.py  test_schemas.py  test_taxonomy.py
data/: mailpilot.db
deploy/: nginx.mailpilot.conf
docker/: frontend.Dockerfile  generate-certs.sh  nginx.conf
outlook-addin/: manifest.docker.xml  manifest.server.xml  manifest.xml  package-lock.json  package.json  tsconfig.json  vite.config.ts
outlook-addin/src/taskpane/: App.tsx  api.ts  index.html  index.tsx  outlook.ts
outlook-addin/src/taskpane/components/: CategoryButtons.tsx  StatusBar.tsx  Summary.tsx
outlook-addin/src/taskpane/public/: commands.html
outlook-addin/src/taskpane/public/assets/: icon-preview.html
